# cgmfwrap

./: .gitignore  CMakeLists.txt  README.md  cgmf_wrapper.cpp  pyproject.toml
src/cgmfwrap/: __init__.py
