[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "cgmfwrap"
version = "0.1.0"
description = "Python bindings for CGMF single-event generation"
readme = "README.md"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["src/cgmfwrap"]
